--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@ body {
 
 #screen {
   height: 100vh;
+  aspect-ratio: 14/9;
 }
 
 #controls {
@@ -30,35 +31,15 @@ body {
 
 #controls > * {
   margin: 5px;
-}
-
-input {
-  font-size: 18px;
-}
-
-.page-nav {
-  width: 48px;
+  width: 100%;
   height: 38px;
-  background-color: black;
+  font-size: 18px;
   border: 1px solid white;
   color: white;
-}
-
-.number {
-  width: 90%;
-  margin-top: 10px;
   background-color: black;
-  border: 1px solid white;
-  color: white;
-  padding: 5px;
   text-align: center;
 }
 
 #go {
   background-color: blue;
-  border: 1px solid white;
-  color: white;
-  width: 48px;
-  height: 32px;
-  text-align: center;
 }
