--- a/style.css
+++ b/style.css
@@ -22,24 +22,35 @@ body {
 
 #controls {
   text-align: center;
-  padding: 10px;
+  padding: 0 6px;
   box-sizing: border-box;
   align-items: center;
   display: flex;
   flex-direction: column;
 }
 
-#controls > * {
-  margin: 5px;
-  width: 100%;
-  height: 38px;
-  font-size: 18px;
-  border: 1px solid white;
-  color: white;
-  background-color: black;
-  text-align: center;
+.blue > * {
+  background-color: blue;
 }
 
-#go {
-  background-color: blue;
+.green > * {
+  background-color: green;
+}
+
+.red > * {
+  background-color: red;
+}
+
+.sub-controls > * {
+  margin: 5px 0;
+  width: 100% !important;
+  display: block;
+  height: 38px;
+  font-size: 20px;
+  font-weight: bold;
+  border: none;
+  border-radius: 4px;
+  text-transform: uppercase;
+  color: white;
+  text-align: center;
 }
