--- a/style.css
+++ b/style.css
@@ -8,11 +8,13 @@ body {
   margin: 0;
   padding: 0;
   background-color: black;
+  color: white;
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: center;
   overflow: hidden;
+  font-family: sans-serif;
 }
 
 #screen {
@@ -53,4 +55,37 @@ body {
   text-transform: uppercase;
   color: white;
   text-align: center;
+}
+
+#rotate b {
+  color: green;
+}
+
+#rotate {
+  display: none;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.95);
+  color: white;
+  font-size: 22px;
+  padding: 3em;
+  box-sizing: border-box;
+  font-weight: bold;
+  text-align: center;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  display: flex;
+  pointer-events: none;
+  z-index: 2;
+}
+
+/* When device is in portait mode, show an overlay with the text "Please rotate your device" */
+@media screen and (orientation: portrait) {
+  #rotate {
+    display: flex;
+  }
 }
