--- a/style.css
+++ b/style.css
@@ -22,6 +22,12 @@ body {
   aspect-ratio: 15/9;
 }
 
+#screen-img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
+
 #controls {
   text-align: center;
   padding: 0 6px;
